feat: use new exchange controller